Ports/jdk/jdk-jdk-18-10/test/langtools/tools/javac/OverrideChecks/Private.out
Private.java:14:5: compiler.err.method.does.not.override.superclass
1 error
